--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
 
     <LinearLayout
         style="@style/BasicLinearLayout"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/activity_margin"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -100,6 +101,13 @@
 
         </LinearLayout>
 
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/small_margin"
+            tools:context=".activity.MainActivity" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
