--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".activity.MainActivity">
+    tools:context=".ui.activity.MainActivity">
 
     <include
         layout="@layout/toolbar"
@@ -107,7 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/small_margin"
-            tools:context=".activity.MainActivity" />
+            tools:context=".ui.activity.MainActivity" />
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
