--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -9,4 +9,14 @@
     <dimen name="small_margin">5dp</dimen>
     <dimen name="temperature_icon_size">30dp</dimen>
 
+    <dimen name="card_temperature_icon_size">30dp</dimen>
+    <dimen name="card_height">145dp</dimen>
+    <dimen name="card_content_margin">15dp</dimen>
+    <dimen name="card_weather_type_icon_size">60dp</dimen>
+    <dimen name="card_corner_radius">8dp</dimen>
+    <dimen name="card_small_image_size">20dp</dimen>
+
+    <dimen name="divider_margin">12dp</dimen>
+    <dimen name="divider_size">1dp</dimen>
+
 </resources>
